--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="container-fluid">
 
       <div id="logo" class="pull-left">
-        <h1><a href="#intro" class="scrollto">Azur Consultores</a></h1>
+        <h1><a href="#intro" class="scrollto">Azur</a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="#intro"><img src="assets/img/logo.png" alt=""></a>-->
       </div>
@@ -70,11 +70,11 @@
         <div class="carousel-inner" role="listbox">
 
           <div class="carousel-item active">
-            <div class="carousel-background"><img src="assets/img/intro-carousel/1.jpg" alt=""></div>
+            <div class="carousel-background"><img src="assets/img/intro-carousel/2.jpg" alt=""></div>
             <div class="carousel-container">
               <div class="carousel-content">
                 <h2>Azur Consultores</h2>
-                <p>Servicios personalizados.Servicios contables, asesorías tributarias y educacionales.</p>
+                <p>Realizamos servicios personalizados en el área contable, además de asesorías tributarias y educacionales.</p>
                 <a href="#featured-services" class="btn-get-started scrollto">Ver más</a>
               </div>
             </div>
