--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 <img src="assets/img/about-mission.jpg" alt="" class="img-fluid">
                 <div class="icon"><i class="ion-ios-speedometer-outline"></i></div>
               </div>
-              <h2 class="title"><a href="#">Nuestra misión/a></h2>
+              <h2 class="title"><a href="#">Nuestra misión</a></h2>
               <p>
                 Es proveer la información contable y de remuneraciones para la correcta planificación y toma de decisiones en el quehacer diario de su establecimiento, todo ello en el marco legislativo actual y atento a las actualizaciones y reformas legales proyectadas por el estado.
               </p>
