--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
               </div>
               <h2 class="title"><a href="#">Nuestra misión</a></h2>
               <p>
-                Es proveer la información contable y de remuneraciones para la correcta planificación y toma de decisiones en el quehacer diario de su establecimiento, todo ello en el marco legislativo actual y atento a las actualizaciones y reformas legales proyectadas por el estado.
+                Proveer eficientemente la información contable-administrativa y de remuneraciones para la toma de decisiones de nuestros clientes, orientado siempre a entregar la mejor alternativa de acuerdo a las posibilidades individuales de cada cliente, todo en el marco de la legislación actual y sus correspondientes actualizaciones proyectadas por el estado.
               </p>
             </div>
           </div>
@@ -156,7 +156,12 @@
               </div>
               <h2 class="title"><a href="#">Objetivo</a></h2>
               <p>
-                Realizar un compañamiento general en el proceso administrativo y contable del establecimiento, proceso de remuneración mensual, confección de los informes contables, asesoría en área de recursos humanos y las necesidades que determine el cliente, todo dentro del marco legislativo actual.
+                Entregar un servicio de calidad y pertinencia, ajustándose a las necesidades del cliente tanto en las áreas de Contabilidad, como Remuneraciones y Gestión de Subvención (vinculadas a la Educación), para lo cual contamos con personal capacitado y de experiencia comprobada.
+
+                Se garantiza acompañamiento general en el proceso administrativo y contable, confección de los informes contables y de gestión, asesoría en área de recursos humanos, proceso de remuneración mensual y las necesidades que determine el cliente, todo dentro del marco legislativo actual.
+
+                Azur consultores se adapta a vuestras necesidades específicas.
+
               </p>
             </div>
           </div>
@@ -169,7 +174,7 @@
               </div>
               <h2 class="title"><a href="#">Nuestra visión</a></h2>
               <p>
-                ESTO NO ESTÁ DEFINIDO AÚN.
+                Conseguir la mejor calidad de servicio de la Región y del País, siempre orientado a entregar soluciones del cliente de manera de lograr el 100% de efectividad y fidelidad de quienes trabajan con nosotros.
               </p>
             </div>
           </div>
