--- a/index.html
+++ b/index.html
@@ -157,11 +157,6 @@
               <h2 class="title"><a href="#">Objetivo</a></h2>
               <p>
                 Entregar un servicio de calidad y pertinencia, ajustándose a las necesidades del cliente tanto en las áreas de Contabilidad, como Remuneraciones y Gestión de Subvención (vinculadas a la Educación), para lo cual contamos con personal capacitado y de experiencia comprobada.
-
-                Se garantiza acompañamiento general en el proceso administrativo y contable, confección de los informes contables y de gestión, asesoría en área de recursos humanos, proceso de remuneración mensual y las necesidades que determine el cliente, todo dentro del marco legislativo actual.
-
-                Azur consultores se adapta a vuestras necesidades específicas.
-
               </p>
             </div>
           </div>
@@ -190,7 +185,7 @@
 
         <header class="section-header wow fadeInUp">
           <h3>Servicios</h3>
-          <p>Laudem latine persequeris id sed, ex fabulas delectus quo. No vel partiendo abhorreant vituperatoribus, ad pro quaestio laboramus. Ei ubique vivendum pro. At ius nisl accusam lorenta zanos paradigno tridexa panatarel.</p>
+          <p>Se garantiza acompañamiento general en el proceso administrativo y contable, confección de los informes contables y de gestión, asesoría en área de recursos humanos, proceso de remuneración mensual y las necesidades que determine el cliente, todo dentro del marco legislativo actual. Azur consultores se adapta a vuestras necesidades específicas.</p>
         </header>
 
         <div class="row">
