--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -200,7 +199,6 @@
           <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-duration="1.4s">
             <div class="icon"><i class="ion-ios-paper-outline"></i></div>
             <h4 class="title"><a href="">Asesoría</a></h4>
-            <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
           </div>
         </div>
 
@@ -221,7 +219,7 @@
       <div class="container">
 
         <header class="section-header">
-          <h3>Our Clients</h3>
+          <h3>Nuestros Clientes</h3>
         </header>
 
         <div class="owl-carousel clients-carousel">
@@ -234,11 +232,6 @@
           <img src="assets/img/clients/client-7.png" alt="">
           <img src="assets/img/clients/client-8.png" alt="">
         </div>
-
-        <div class="facts-img">
-          <img src="assets/img/facts-img.png" alt="" class="img-fluid">
-        </div>
-      </div>
     </section><!-- End Our Clients Section -->
 
     <!-- ======= Contact Section ======= -->
@@ -247,7 +240,7 @@
 
         <div class="section-header">
           <h3>Contáctanos</h3>
-          <p>Escríbenos ante cualquier duda o inquietud que podamos ayudarte a solucionar</p>
+          <p>Comunícate con nosotros a cualquiera de nuestras direcciones y te responderemos con prontitud.</p>
         </div>
 
         <div class="row contact-info">
