--- a/servicios.html
+++ b/servicios.html
@@ -70,6 +70,26 @@
   
   <main id="main">
 
+    <!-- ======= Footer ======= -->
+  <footer id="footer">
+    <div class="footer-top">
+      <div class="container">
+        <div class="row">
+
+    <div class="container">
+      <div class="copyright">
+      </div>
+      <div class="credits">
+        <!--
+        All the links in the footer should remain intact.
+        You can delete the links only if you purchased the pro version.
+        Licensing information: https://bootstrapmade.com/license/
+        Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=BizPage
+      -->
+      </div>
+    </div>
+  </footer><!-- End Footer -->
+        
     <!-- ======= Testimonials Section ======= -->
     <section id="testimonials" class="section-bg wow fadeInUp">
       <div class="container">
