--- a/servicios.html
+++ b/servicios.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>BizPage Bootstrap Template</title>
+  <title>Azur</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
@@ -42,27 +42,27 @@
     <div class="container-fluid">
 
       <div id="logo" class="pull-left">
-        <h1><a href="#intro" class="scrollto">BizPage</a></h1>
+        <h1><a href="#intro" class="scrollto">Azur</a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="#intro"><img src="assets/img/logo.png" alt=""></a>-->
       </div>
 
       <nav id="nav-menu-container">
         <ul class="nav-menu">
-          <li class="menu-active"><a href="#intro">Home</a></li>
-          <li><a href="#about">About Us</a></li>
-          <li><a href="#services">Services</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#team">Team</a></li>
-          <li class="menu-has-children"><a href="">Drop Down</a>
+          <li class="menu-active"><a href="index.html">Inicio</a></li>
+          <li><a href="nosotros.html">Acerca de</a></li>
+          <li class="servicios.html"><a href="">Servicios</a>
             <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
+              <li><a href="educacion.html">Asesoría Educacional</a></li>
+              <li><a href="contable.html">Asesoría Contable</a></li>
+              <li><a href="tributaria.html">Asesoría Tributaria</a></li>
+              <li><a href="impuestos.html">Impuestos</a></li>
+              <li><a href="remuneraciones.html">Remuneraciones</a></li>
               <li><a href="#">Drop Down 5</a></li>
             </ul>
           </li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="equipo.html">Equipo</a></li>
+          <li><a href="contacto.html">Contacto</a></li>
         </ul>
       </nav><!-- #nav-menu-container -->
     </div>
@@ -95,14 +95,14 @@
       <div class="container">
 
         <header class="section-header">
-          <h3>Testimonials</h3>
+          <h3>Servicios</h3>
         </header>
 
         <div class="owl-carousel testimonials-carousel">
 
           <div class="testimonial-item">
             <img src="assets/img/testimonial-1.jpg" class="testimonial-img" alt="">
-            <h3>Saul Goodman</h3>
+            <h3>Educacionales</h3>
             <h4>Ceo &amp; Founder</h4>
             <p>
               <img src="assets/img/quote-sign-left.png" class="quote-sign-left" alt="">
