--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 <img src="assets/img/about-mission.jpg" alt="" class="img-fluid">
                 <div class="icon"><i class="ion-ios-speedometer-outline"></i></div>
               </div>
-              <h2 class="title"><a href="#">Nuestra misión</a></h2>
+              <h2 class="title"><a href="#">Misión</a></h2>
               <p>
                 Proveer eficientemente la información contable-administrativa y de remuneraciones para la toma de decisiones de nuestros clientes, orientado siempre a entregar la mejor alternativa de acuerdo a las posibilidades individuales de cada cliente, todo en el marco de la legislación actual y sus correspondientes actualizaciones proyectadas por el estado.
               </p>
@@ -165,7 +165,7 @@
                 <img src="assets/img/about-vision.jpg" alt="" class="img-fluid">
                 <div class="icon"><i class="ion-ios-eye-outline"></i></div>
               </div>
-              <h2 class="title"><a href="#">Nuestra visión</a></h2>
+              <h2 class="title"><a href="#">Visión</a></h2>
               <p>
                 Conseguir la mejor calidad de servicio de la Región y del País, siempre orientado a entregar soluciones del cliente de manera de lograr el 100% de efectividad y fidelidad de quienes trabajan con nosotros.
               </p>
