--- a/servicios.html
+++ b/servicios.html
@@ -95,66 +95,35 @@
       <div class="container">
 
         <header class="section-header">
-          <h3>Servicios</h3>
+          <h3>Equipo</h3>
         </header>
 
         <div class="owl-carousel testimonials-carousel">
 
           <div class="testimonial-item">
             <img src="assets/img/testimonial-1.jpg" class="testimonial-img" alt="">
-            <h3>Educacionales</h3>
-            <h4>Ceo &amp; Founder</h4>
+            <h3>Marcelo Jar</h3>
+            <h4>Ceo &amp; Socio Fundador</h4>
             <p>
               <img src="assets/img/quote-sign-left.png" class="quote-sign-left" alt="">
-              Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
+              Formación académica de Contador Auditor y perfeccionado en el área desde el año 1998 a la fecha. Teniendo a través de ello experiencias en el ámbito privado y público. Ello ha permitido un desarrollo profesional en materias tales como: Políticas de control interno, flujos de tesorería y planificación financiera, así como contador y gestor tributario de empresas en el área agrícola, industrial y servicios personales de salud y educación. 
+              En el mismo contexto y debido a una necesidad de aprendizaje constante se ha desenvuelto en relatorías, exposiciones, para la formación de estudiantes en temáticas de impuestos de empresas y personas. 
+              La formación, el aprendizaje y la capacitación permanente son elementos fundamentales en la formación personal. Elementos que se mantienen a través de los años y experiencia adquirida. El uso de nuevas herramientas tecnológicas, aprendizaje del lenguaje contextualizado en el rubro, son aspectos fundamentales que permiten el desarrollo profesional.
+
               <img src="assets/img/quote-sign-right.png" class="quote-sign-right" alt="">
             </p>
           </div>
 
           <div class="testimonial-item">
             <img src="assets/img/testimonial-2.jpg" class="testimonial-img" alt="">
-            <h3>Sara Wilsson</h3>
-            <h4>Designer</h4>
+            <h3>Leonardo Huerta</h3>
+            <h4>Encargado de Proyectos. Contador General.</h4>
             <p>
               <img src="assets/img/quote-sign-left.png" class="quote-sign-left" alt="">
-              Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
+              Con experiencia en variadas areas del ámbito educacional, fue Contador en Corporación Desarrollo Social del Sector Rural y Fundación Sna Educa en Panguipulli, ex Jefe Administrativo de Fundación Educacional People Help People en el Liceo People Help People de Panguipulli, Diplomado en Gestión de RRHH, Diplomado en Control y Remuneración Docente de Colegios Particulares Subvencionados, Diplomado en Recursos Humanos, suma a sus 15 años de experiencia en el campo educacional la capacitación permanente, además de conocimientos en elaboración de Presupuestos, Rendición de Subvenciones, Supervisión de los variados procesos administrativos solicitados por Mineduc y la Dirección del Trabajo.
               <img src="assets/img/quote-sign-right.png" class="quote-sign-right" alt="">
             </p>
           </div>
-
-          <div class="testimonial-item">
-            <img src="assets/img/testimonial-3.jpg" class="testimonial-img" alt="">
-            <h3>Jena Karlis</h3>
-            <h4>Store Owner</h4>
-            <p>
-              <img src="assets/img/quote-sign-left.png" class="quote-sign-left" alt="">
-              Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
-              <img src="assets/img/quote-sign-right.png" class="quote-sign-right" alt="">
-            </p>
-          </div>
-
-          <div class="testimonial-item">
-            <img src="assets/img/testimonial-4.jpg" class="testimonial-img" alt="">
-            <h3>Matt Brandon</h3>
-            <h4>Freelancer</h4>
-            <p>
-              <img src="assets/img/quote-sign-left.png" class="quote-sign-left" alt="">
-              Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
-              <img src="assets/img/quote-sign-right.png" class="quote-sign-right" alt="">
-            </p>
-          </div>
-
-          <div class="testimonial-item">
-            <img src="assets/img/testimonial-5.jpg" class="testimonial-img" alt="">
-            <h3>John Larson</h3>
-            <h4>Entrepreneur</h4>
-            <p>
-              <img src="assets/img/quote-sign-left.png" class="quote-sign-left" alt="">
-              Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
-              <img src="assets/img/quote-sign-right.png" class="quote-sign-right" alt="">
-            </p>
-          </div>
-
         </div>
 
       </div>
