--- a/servicios.html
+++ b/servicios.html
@@ -102,8 +102,8 @@
 
           <div class="testimonial-item">
             <img src="assets/img/testimonial-1.jpg" class="testimonial-img" alt="">
-            <h3>Marcelo Jar</h3>
-            <h4>Ceo &amp; Socio Fundador</h4>
+            <h3>Marcelo Jara</h3>
+            <h4>Socio Fundador</h4>
             <p>
               <img src="assets/img/quote-sign-left.png" class="quote-sign-left" alt="">
               Formación académica de Contador Auditor y perfeccionado en el área desde el año 1998 a la fecha. Teniendo a través de ello experiencias en el ámbito privado y público. Ello ha permitido un desarrollo profesional en materias tales como: Políticas de control interno, flujos de tesorería y planificación financiera, así como contador y gestor tributario de empresas en el área agrícola, industrial y servicios personales de salud y educación. 
