--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <li class="menu-active"><a href="#intro">Inicio</a></li>
           <li><a href="#about">Acerca de</a></li>
           <li><a href="#services">Servicios</a></li>
-          <li><a href="#team">Equipo</a></li>
+          <li><a href="equipo.html">Equipo</a></li>
           <li><a href="#contact">Contacto</a></li>
         </ul>
       </nav><!-- #nav-menu-container -->
@@ -209,7 +209,7 @@
     <section id="call-to-action" class="wow fadeIn">
       <div class="container text-center">
         <h3>¿Tienes alguna duda?</h3>
-        <p> Puedes escribirnos a info@azurconsultores.cl.</p>
+        <p> Puedes escribirnos a infoazurconsultores@gmail.com</p>
         <a class="cta-btn" href="#">Resolvemos tus dudas</a>
       </div>
     </section><!-- End Call To Action Section -->
@@ -229,7 +229,7 @@
             <div class="contact-address">
               <i class="ion-ios-location-outline"></i>
               <h3>Dirección</h3>
-              <address>Padre las Casas, Temuco, Chile</address>
+              <address>Próximamente estaremos ubicados en el edicio Las Raíces,Andrés Bello 934, Temuco, Chile</address>
             </div>
           </div>
 
@@ -245,7 +245,7 @@
             <div class="contact-email">
               <i class="ion-ios-email-outline"></i>
               <h3>Email</h3>
-              <p><a href="mailto:marcelo.jara@azurconsultor.com">marcelo.jara@azurconsultor.com</a></p>
+              <p><a href="mailto:infoazurconsultores@gmail.com">infoazurconsultores@gmail.com</a></p>
             </div>
           </div>
 
