--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
             <div class="contact-address">
               <i class="ion-ios-location-outline"></i>
               <h3>Dirección</h3>
-              <address>Próximamente estaremos ubicados en el edicio Las Raíces,Andrés Bello 934, Temuco, Chile</address>
+              <address>Próximamente estaremos ubicados en el edificio Las Raíces, Andrés Bello 934, Temuco, Chile</address>
             </div>
           </div>
 
